Release 1.3.0 (2015-09-08)
- Improve performance, removed some blocking code from the statistics update
- Better graphs, replaced pygal graphing library with matplotlib
- Fix crash when statistics page was requested before statistics are ready
- Show ip address instead of 'disabled' when hostname resolving is disabled
- Stability fixes
- Add trend lines to graphs
- Add historical graph, showing all reports in the database
- Calculate graphs for stats page in separate thread

Release 1.2.0 (2015-07-31)
- Fix Content-Type headers of SVG files
- Fix size of SVG graphs for Internet Explorer
- Fix error with generating stats when database is empty
- Improve logging of exceptions
- Provide more information in the README for installing the GeoIP library

Release 1.1.1 (2015-07-24)
- Bugfix release, include actual JavaScript and CSS files

Release 1.1 (2015-07-24)
- Moved XMLRPC location to the more standard http://your.host.name:9911/RPC2
- Added server statistics page at http://your.host.name:9911
  When updating, please review the [stats] section of the configuration file.
- Write periodical basic database state to log file
- Improved error handling
- Do not install the configuration file by default, provide an example file instead
- Provide example systemd service file and init script

Release 1.0 (2015-07-15)
- Unit tests added
- Fix and/or document dependencies on ipaddr and other Python libraries
- Add database evolution to repair bug in database maintenance, which could leave crackers without reports
- Add separate legacy_expiry_days config setting
- Added --purge-legacy-addresses, --purge-reported-addresses and --purge-ip command line options
- Change default setting not to use legacy sync server
- Sending SIGHUP now causes dh_syncserver to re-read the configuration file
- Updated and clarified licensing of Anne Bezemer's algorithm

Release 0.9 (2015-07-06)
- Improve report merging algorithm
- Use better default for parameters for sync with legacy server
