@@ -1,3 +1,7 @@
+Release 1.x.x
+- Add historical statistics that survive a database purge, using
+  the 'history' table
+
 Release 1.3.0 (2015-09-08)
 - Improve performance, removed some blocking code from the statistics update
 - Better graphs, replaced pygal graphing library with matplotlib
